--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-   <ExpandableListView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-   </ExpandableListView>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_wifi_black_24dp" />
+
+    <VideoView
+        android:id="@+id/liveVideoFeed"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="79dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
