--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,26 +3,60 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/constraintLayout"
+    android:background="@color/colorBlack"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/wifiImage"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="100dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_wifi_black_24dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <VideoView
-        android:id="@+id/liveVideoFeed"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="79dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/navigateToVideo"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_videocam_black_24dp" />
+
+    <ImageView
+        android:id="@+id/navigateToMap"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="117dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/wifiImage"
+        app:srcCompat="@drawable/ic_location" />
+
+    <ImageView
+        android:id="@+id/navigateToDiagnostics"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="117dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/navigateToVideo"
+        app:srcCompat="@drawable/ic_show_chart" />
+
+
+    <ImageView
+        android:id="@+id/saab_logo"
+        android:layout_width="399dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/vitlogo" />
+
 
 </android.support.constraint.ConstraintLayout>
